WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221437
[LFC][IFC] Incorrect last potential wrap position when inline box is present
https://bugs.webkit.org/show_bug.cgi?id=221437
Summary
[LFC][IFC] Incorrect last potential wrap position when inline box is present
alan
Reported
2021-02-04 16:28:01 PST
The trailing run of the candidate content is not always a valid wrap opportunity see: this_is_the_trailing_run<span> <-but_this_space_here_is_the_soft_wrap_opportunity
Attachments
Patch
(24.13 KB, patch)
2021-02-04 16:49 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-02-04 16:49:43 PST
Created
attachment 419340
[details]
Patch
EWS
Comment 2
2021-02-05 06:29:27 PST
Committed
r272412
: <
https://trac.webkit.org/changeset/272412
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 419340
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-02-05 06:30:15 PST
<
rdar://problem/74023255
>
alan
Comment 4
2021-04-27 09:48:25 PDT
***
Bug 225086
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug